Fix font fallback after a 404 response

https://chromium.googlesource.com/chromium/src/+/126dc76bd00c11209ccf65ea151d5263fde0c7dc
suppresses font fallback if a font request fails due to "cancellation". In theory,
this is for cases where the conceptual resource load is no longer needed (whether
due to document detach, user-iniatated stop, etc.), and it doesn't make sense to
fallback to a different font. However, some other failures are flagged as
cancellations that don't want this behavior. In the case of this bug, a load that
is cancelled due to a 4xx/5xx response will be "cancelled" so that we don't waste
time with a response body we won't use. But because it's flagged as a cancellation,
we incorrect skip fallback.

Bug: 780389
Test: http/tests/webfont/fallback-after-404.html
Change-Id: Ia5e3385722a52eaf6e6f6c4db582399378bf44df